--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/node": "^20.1.2",
         "@types/pg": "^8.6.6",
@@ -20,6 +21,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-async-errors": "^3.1.1",
